Add plugin screenshots

--- a/readme
+++ b/readme
@@ -30,6 +30,8 @@ Yes, you can change both the slide duration and the slide transition speeds in S
 
 
 == Screenshots ==
+1. An example slideshow slide.
+2. An example slideshow on hover showing arrows.
 
 
 == Changelog ==
