Update slideshow readme faq

--- a/readme
+++ b/readme
@@ -17,7 +17,7 @@ Change the slideshow speed, fade in speed, add a pause/play button, and more.
 
 
 == Frequently Asked Questions ==
-= Does the plugin support links from slides =
+= Does the plugin support links from slides? =
 Yes, the plugin supports both slide title and image links.
 
 =Can you change the slideshow speed?=
